--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   carousel_slider: ^5.1.1
   protobuf: ^4.1.0
   protoc_plugin: ^22.3.0
-
+  lakos: ^2.0.6
 
 dev_dependencies:
   flutter_test:
